--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,8 @@ twitter_username: SREcampdirector
 github_username:  sre-camp
 
 # Build settings
-remote_theme: pages-themes/hacker@v0.2.0
+remote_theme: pages-themes/midnight@v0.2.0
 plugins:
-  - jekyll-feed
   - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Exclude from processing.
